# oregon-trail-1975

./: .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  oregon-trail-1975.bas  oregon-trail-1978.bas  test.txt  test78.txt
.github/workflows/: ci.yml  ci_basic.yml
archive/: .travis.yml
cmake/: execute.cmake
src/: oregon-trail-1975.f  oregon-trail-1978.f90
tests/: in75.txt
